# OverflowOS

./: .gitignore  Cargo.toml  README.md  export  rust-toolchain.toml  rustfmt.toml  x86_64-unknown-none.json
crates/bootloader/: Cargo.toml
crates/bootloader/src/: elf.rs  elf_loader.rs  error.rs  file.rs  files.rs  halt.rs  logger.rs  main.rs
crates/bootloader/src/graphics/: mod.rs
crates/kernel/: Cargo.toml  build.rs  kernel.ld
crates/kernel/.cargo/: config.toml
crates/kernel/src/: main.rs
crates/libcore/: Cargo.toml
crates/libcore/src/: lib.rs
crates/libcpu/: Cargo.toml  README.md
crates/libcpu/src/: lib.rs
crates/libcpu/src/arm/: mod.rs
crates/libcpu/src/x86/: cpuid.rs  gdt.rs  idt.rs  mod.rs
crates/libelfloader/: Cargo.toml
crates/libelfloader/src/: lib.rs
crates/libgraphics/: Cargo.toml
crates/libgraphics/src/: error.rs  lib.rs  log.rs  text.rs
