[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
authors = ["Cedric Hammes <cach30verfl0w@gmail.com>"]
repository = "https://github.com/Cach30verfl0w/OverflowOS"
license-file = "../../LICENSE"
edition = "2021"

[workspace.dependencies]
thiserror-no-std = "2.0.2"
libcpu = { git = "https://github.com/Cach30verfl0w/libcpu" }
libgraphics = { path = "crates/libgraphics" }
libelfloader = { path = "crates/libelfloader" }