[package]
name = "bootloader"
description = "This is the project of the OverflowOS UEFI-based bootloader"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# uefi-rs as dependency with support for alloc crate and a global allocator
[dependencies.uefi]
version = "0.24.0"
features = ["alloc", "global_allocator"]