[package]
name = "bootloader"
description = "This is the project of the OverflowOS UEFI-based bootloader"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.osimage]
kind = "bootloader"

# uefi-rs as dependency with support for alloc crate and a global allocator
[dependencies.uefi]
version = "0.24.0"
features = ["alloc"]

[dependencies.uefi-services]
version = "0.21.0"

# log as dependency for console printing
[dependencies.log]
version = "0.4.20"

# spin as dependency for Mutex
[dependencies.spin]
version = "0.9.8"

[dependencies.thiserror-no-std]
version = "2.0.2"

[dependencies.elf]
version = "0.7.2"
default-features = false

# Import some crates from workspace
[dependencies]
libcpu.workspace = true
