[package]
name = "kernel"
description = "This is the project of the UEFI-based OverflowOS monolithic kernel"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
uefi = { version = "0.24.0", features = ["alloc", "global_allocator"] }