[package]
name = "kernel"
description = "This is the official Kernel of OverflowOS"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

[package.metadata.osimage]
kind = "kernel"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
libcpu.workspace = true
libgraphics.workspace = true
libelf.workspace = true
log = "0.4.20"