[package]
name = "libcore"
description = "LibCore provides functionalities which are shared between bootloader and kernel"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
uefi = "0.24.0"
libcpu.workspace = true