[package]
name = "libcpu"
description = "This library is used by the Overflow bootloader and kernel to use the CPU features"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitflags = { version = "2.4.0" }
x86_64 = "0.14.11"