[package]
name = "libcpu"
description = "This library is used by the Overflow bootloader and kernel to use the CPU features"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
bitflags = { version = "2.4.0" }
static_assertions = "1.1.0"
bit_field = "0.10.2"