[package]
name = "libelfloader"
description = "LibElfLoader is a library to provide all functionalities for loading ELF files from memory"
categories = ["memory-management", "no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
elf = { version = "0.7.2", default-features = false }