[package]
name = "libgraphics"
description = "LibGraphics is a library to instrument the Graphics Output Protocol for drawing things or writing Text"
categories = ["no-std", "embedded"]
version = "1.0.0-dev.1"

# Variables from workspace
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
uefi = { version = "0.24.0", features = ["alloc"] }
embedded-graphics = "0.8.1"
thiserror-no-std = "2.0.2"
log = "0.4.20"